--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -1,6 +1,6 @@
 [theme]
-primaryColor="#F63366"
-backgroundColor="#FFFFFF"
-secondaryBackgroundColor="#F0F2F6"
-textColor="#262730"
+primaryColor="#111111"
+backgroundColor="#EEEEEE"
+secondaryBackgroundColor="#CCDDFF"
+textColor="#222222"
 font="sans serif"
