--- a/requirements.txt
+++ b/requirements.txt
@@ -1,41 +1,45 @@
 altair==5.1.2
 attrs==23.1.0
-blinker==1.7.0
+blinker==1.6.3
 cachetools==5.3.2
 certifi==2023.7.22
-charset-normalizer==3.3.2
+charset-normalizer==3.3.1
 click==8.1.7
+et-xmlfile==1.1.0
 gitdb==4.0.11
 GitPython==3.1.40
 idna==3.4
 importlib-metadata==6.8.0
 isodate==0.6.1
 Jinja2==3.1.2
-jsonschema==4.19.2
+jsonschema==4.19.1
 jsonschema-specifications==2023.7.1
+lxml==4.9.3
 markdown-it-py==3.0.0
 MarkupSafe==2.1.3
 mdurl==0.1.2
-networkx==3.2.1
+networkx==3.2
 numpy==1.26.1
+openpyxl==3.1.4
 packaging==23.2
-pandas==2.1.3
+pandas==2.1.1
 Pillow==10.1.0
-protobuf==4.25.0
-pyarrow==14.0.1
+protobuf==4.24.4
+pyarrow==13.0.0
 pydeck==0.8.1b0
 Pygments==2.16.1
-pyparsing==3.1.1
+pyparsing==3.1.2
 python-dateutil==2.8.2
 pytz==2023.3.post1
 rdflib==7.0.0
 referencing==0.30.2
 requests==2.31.0
 rich==13.6.0
-rpds-py==0.12.0
+rpds-py==0.10.6
+serpapi==0.1.4
 six==1.16.0
 smmap==5.0.1
-streamlit==1.35.0
+streamlit==1.36.0
 streamlit-agraph==0.0.45
 tenacity==8.2.3
 toml==0.10.2
