--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -1,6 +1,6 @@
 [theme]
 primaryColor="#111111"
-backgroundColor="#EEEEEE"
+backgroundColor="#FFFFFF"
 secondaryBackgroundColor="#CCDDFF"
 textColor="#222222"
 font="sans serif"
