--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,6 @@
 altair==5.1.2
+annotated-types==0.7.0
+anyio==4.6.0
 asttokens==2.4.1
 attrs==23.1.0
 blinker==1.6.3
@@ -7,17 +9,22 @@ certifi==2023.7.22
 charset-normalizer==3.3.1
 click==8.1.7
 decorator==5.1.1
+distro==1.9.0
 et-xmlfile==1.1.0
 exceptiongroup==1.2.2
 executing==2.1.0
 gitdb==4.0.11
 GitPython==3.1.40
+h11==0.14.0
+httpcore==1.0.6
+httpx==0.27.2
 idna==3.4
 importlib-metadata==6.8.0
 ipython==8.27.0
 isodate==0.6.1
 jedi==0.19.1
 Jinja2==3.1.2
+jiter==0.5.0
 jsonpickle==3.3.0
 jsonschema==4.19.1
 jsonschema-specifications==2023.7.1
@@ -28,6 +35,7 @@ matplotlib-inline==0.1.7
 mdurl==0.1.2
 networkx==3.2
 numpy==1.26.1
+openai==1.51.0
 openpyxl==3.1.4
 packaging==23.2
 pandas==2.1.1
@@ -39,6 +47,8 @@ protobuf==4.24.4
 ptyprocess==0.7.0
 pure_eval==0.2.3
 pyarrow==13.0.0
+pydantic==2.9.2
+pydantic_core==2.23.4
 pydeck==0.8.1b0
 Pygments==2.16.1
 pyparsing==3.1.2
@@ -53,15 +63,17 @@ rpds-py==0.10.6
 serpapi==0.1.4
 six==1.16.0
 smmap==5.0.1
+sniffio==1.3.1
 stack-data==0.6.3
-streamlit==1.36.0
+streamlit==1.39.0
 streamlit-agraph==0.0.45
 tenacity==8.2.3
 toml==0.10.2
 toolz==0.12.0
 tornado==6.3.3
+tqdm==4.66.5
 traitlets==5.14.3
-typing_extensions==4.8.0
+typing_extensions==4.12.2
 tzdata==2023.3
 tzlocal==5.2
 urllib3==2.0.7
