--- a/requirements.txt
+++ b/requirements.txt
@@ -8,11 +8,14 @@ cachetools==5.3.2
 certifi==2023.7.22
 charset-normalizer==3.3.1
 click==8.1.7
+contourpy==1.3.0
+cycler==0.12.1
 decorator==5.1.1
 distro==1.9.0
 et-xmlfile==1.1.0
 exceptiongroup==1.2.2
 executing==2.1.0
+fonttools==4.54.1
 gitdb==4.0.11
 GitPython==3.1.40
 h11==0.14.0
@@ -28,9 +31,11 @@ jiter==0.5.0
 jsonpickle==3.3.0
 jsonschema==4.19.1
 jsonschema-specifications==2023.7.1
+kiwisolver==1.4.7
 lxml==4.9.3
 markdown-it-py==3.0.0
 MarkupSafe==2.1.3
+matplotlib==3.9.2
 matplotlib-inline==0.1.7
 mdurl==0.1.2
 networkx==3.2
@@ -60,6 +65,7 @@ referencing==0.30.2
 requests==2.31.0
 rich==13.6.0
 rpds-py==0.10.6
+seaborn==0.13.2
 serpapi==0.1.4
 six==1.16.0
 smmap==5.0.1
