--- a/requirements.txt
+++ b/requirements.txt
@@ -28,6 +28,7 @@ isodate==0.6.1
 jedi==0.19.1
 Jinja2==3.1.2
 jiter==0.5.0
+joblib==1.4.2
 jsonpickle==3.3.0
 jsonschema==4.19.1
 jsonschema-specifications==2023.7.1
@@ -66,6 +67,8 @@ referencing==0.30.2
 requests==2.31.0
 rich==13.6.0
 rpds-py==0.10.6
+scikit-learn==1.5.2
+scipy==1.14.1
 seaborn==0.13.2
 serpapi==0.1.4
 six==1.16.0
@@ -75,6 +78,7 @@ stack-data==0.6.3
 streamlit==1.39.0
 streamlit-agraph==0.0.45
 tenacity==8.2.3
+threadpoolctl==3.5.0
 toml==0.10.2
 toolz==0.12.0
 tornado==6.3.3
