--- a/requirements.txt
+++ b/requirements.txt
@@ -11,16 +11,20 @@ click==8.1.7
 contourpy==1.3.0
 cycler==0.12.1
 decorator==5.1.1
+deepl==1.21.0
 distro==1.9.0
 et-xmlfile==1.1.0
 exceptiongroup==1.2.2
 executing==2.1.0
+filelock==3.17.0
 fonttools==4.54.1
+fsspec==2025.2.0
 gitdb==4.0.11
 GitPython==3.1.40
 h11==0.14.0
 httpcore==1.0.6
 httpx==0.27.2
+huggingface-hub==0.29.1
 idna==3.4
 importlib-metadata==6.8.0
 ipython==8.27.0
@@ -39,6 +43,7 @@ MarkupSafe==2.1.3
 matplotlib==3.9.2
 matplotlib-inline==0.1.7
 mdurl==0.1.2
+mpmath==1.3.0
 networkx==3.2
 numpy==1.26.1
 openai==1.51.0
@@ -60,16 +65,21 @@ pydeck==0.8.1b0
 Pygments==2.16.1
 pyparsing==3.1.2
 python-dateutil==2.8.2
+python-docx==1.1.2
 pytz==2023.3.post1
 pyvis==0.3.2
+PyYAML==6.0.2
 rdflib==7.0.0
 referencing==0.30.2
+regex==2024.11.6
 requests==2.31.0
 rich==13.6.0
 rpds-py==0.10.6
+safetensors==0.5.3
 scikit-learn==1.5.2
 scipy==1.14.1
 seaborn==0.13.2
+sentencepiece==0.2.0
 serpapi==0.1.4
 six==1.16.0
 smmap==5.0.1
@@ -77,8 +87,10 @@ sniffio==1.3.1
 stack-data==0.6.3
 streamlit==1.39.0
 streamlit-agraph==0.0.45
+sympy==1.13.1
 tenacity==8.2.3
 threadpoolctl==3.5.0
+tokenizers==0.21.0
 toml==0.10.2
 toolz==0.12.0
 tornado==6.3.3
@@ -91,8 +103,3 @@ urllib3==2.0.7
 validators==0.22.0
 wcwidth==0.2.13
 zipp==3.17.0
-
-deepl~=1.21.0
-torch~=2.6.0
-transformers~=4.49.0
-setuptools~=65.5.0
