--- a/requirements.txt
+++ b/requirements.txt
@@ -21,6 +21,7 @@ fonttools==4.54.1
 fsspec==2025.2.0
 gitdb==4.0.11
 GitPython==3.1.40
+graphviz==0.20.3
 h11==0.14.0
 httpcore==1.0.6
 httpx==0.27.2
