--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ attrs==23.1.0
 blinker==1.6.3
 cachetools==5.3.2
 certifi==2023.7.22
+chardet==5.2.0
 charset-normalizer==3.3.1
 click==8.1.7
 contourpy==1.3.0
@@ -64,6 +65,7 @@ pydantic==2.9.2
 pydantic_core==2.23.4
 pydeck==0.8.1b0
 Pygments==2.16.1
+pygount==2.0.0
 pyparsing==3.1.2
 python-dateutil==2.8.2
 python-docx==1.1.2
@@ -91,6 +93,7 @@ streamlit-agraph==0.0.45
 sympy==1.13.1
 tenacity==8.2.3
 threadpoolctl==3.5.0
+tiktoken==0.9.0
 tokenizers==0.21.0
 toml==0.10.2
 toolz==0.12.0
