--- a/requirements.txt
+++ b/requirements.txt
@@ -17,6 +17,7 @@ distro==1.9.0
 et-xmlfile==1.1.0
 exceptiongroup==1.2.2
 executing==2.1.0
+faiss-cpu==1.11.0
 filelock==3.17.0
 fonttools==4.54.1
 fsspec==2025.2.0
@@ -24,9 +25,10 @@ gitdb==4.0.11
 GitPython==3.1.40
 graphviz==0.20.3
 h11==0.14.0
+hf-xet==1.1.5
 httpcore==1.0.6
 httpx==0.27.2
-huggingface-hub==0.29.1
+huggingface-hub==0.33.1
 idna==3.4
 importlib-metadata==6.8.0
 ipython==8.27.0
@@ -82,6 +84,7 @@ safetensors==0.5.3
 scikit-learn==1.5.2
 scipy==1.14.1
 seaborn==0.13.2
+sentence-transformers==4.1.0
 sentencepiece==0.2.0
 serpapi==0.1.4
 six==1.16.0
@@ -90,16 +93,18 @@ sniffio==1.3.1
 stack-data==0.6.3
 streamlit==1.39.0
 streamlit-agraph==0.0.45
-sympy==1.13.1
+sympy==1.14.0
 tenacity==8.2.3
 threadpoolctl==3.5.0
 tiktoken==0.9.0
 tokenizers==0.21.0
 toml==0.10.2
 toolz==0.12.0
+torch==2.7.1
 tornado==6.3.3
 tqdm==4.66.5
 traitlets==5.14.3
+transformers==4.53.0
 typing_extensions==4.12.2
 tzdata==2023.3
 tzlocal==5.2
