--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,11 @@
 altair==5.1.2
 annotated-types==0.7.0
 anyio==4.9.0
+arrow==1.3.0
 asttokens==2.4.1
+async-timeout==5.0.1
 attrs==23.1.0
-blinker==1.6.3
+blinker==1.9.0
 blis==1.3.0
 cachetools==5.3.2
 catalogue==2.0.10
@@ -26,6 +28,7 @@ exceptiongroup==1.2.2
 executing==2.1.0
 faiss-cpu==1.11.0
 filelock==3.17.0
+Flask==3.1.1
 fonttools==4.54.1
 fsspec==2025.2.0
 gitdb==4.0.11
@@ -42,6 +45,7 @@ idna==3.4
 importlib-metadata==6.8.0
 ipython==8.27.0
 isodate==0.6.1
+itsdangerous==2.2.0
 jedi==0.19.1
 Jinja2==3.1.2
 jiter==0.5.0
@@ -94,11 +98,15 @@ pytz==2025.2
 pyvis==0.3.2
 PyYAML==6.0.2
 rdflib==7.0.0
+redis==6.2.0
+Redis-Sentinel-Url==1.0.1
 referencing==0.30.2
 regex==2024.11.6
 requests==2.31.0
 rich==13.6.0
 rpds-py==0.10.6
+rq==2.4.1
+rq-dashboard==0.8.4
 safetensors==0.5.3
 scikit-learn==1.5.2
 scipy==1.14.1
@@ -133,6 +141,7 @@ tqdm==4.66.5
 traitlets==5.14.3
 transformers==4.53.0
 typer==0.16.0
+types-python-dateutil==2.9.0.20250708
 types-requests==2.32.4.20250611
 typing-inspection==0.4.1
 typing_extensions==4.12.2
@@ -144,7 +153,6 @@ validators==0.22.0
 wasabi==1.1.3
 wcwidth==0.2.13
 weasel==0.4.1
+Werkzeug==3.1.3
 wrapt==1.17.2
 zipp==3.17.0
-redis==5.0.4
-rq==1.17
