bugfix on progress bar

--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -1,6 +1,6 @@
 [theme]
 primaryColor="#AAAAAA"
-backgroundColor="#EAEAE4"
+backgroundColor="#FFFFFF"
 secondaryBackgroundColor="#A3998E"
 textColor="#001A23"
 font="sans serif"
