--- a/requirements.txt
+++ b/requirements.txt
@@ -6,11 +6,14 @@ arrow==1.3.0
 asttokens==2.4.1
 async-timeout==5.0.1
 attrs==23.1.0
+bcrypt==4.3.0
 blinker==1.9.0
 blis==1.3.0
 cachetools==5.3.2
+captcha==0.7.1
 catalogue==2.0.10
 certifi==2023.7.22
+cffi==1.17.1
 chardet==5.2.0
 charset-normalizer==3.3.1
 click==8.1.7
@@ -18,6 +21,7 @@ cloudpathlib==0.21.1
 colorama==0.4.6
 confection==0.1.5
 contourpy==1.3.0
+cryptography==45.0.6
 cycler==0.12.1
 cymem==2.0.11
 decorator==5.1.1
@@ -27,7 +31,9 @@ en_core_web_sm @ https://github.com/explosion/spacy-models/releases/download/en_
 et-xmlfile==1.1.0
 exceptiongroup==1.2.2
 executing==2.1.0
+extra-streamlit-components==0.1.81
 faiss-cpu==1.11.0
+fakeredis==2.31.0
 filelock==3.17.0
 Flask==3.1.1
 fonttools==4.54.1
@@ -44,6 +50,7 @@ httpx-sse==0.4.1
 huggingface-hub==0.33.1
 idna==3.4
 importlib-metadata==6.8.0
+iniconfig==2.1.0
 ipython==8.27.0
 isodate==0.6.1
 itsdangerous==2.2.0
@@ -79,19 +86,23 @@ parso==0.8.4
 pexpect==4.9.0
 Pillow==10.1.0
 plotly==5.24.1
+pluggy==1.6.0
 preshed==3.0.10
 prompt_toolkit==3.0.48
 protobuf==4.24.4
 ptyprocess==0.7.0
 pure_eval==0.2.3
 pyarrow==20.0.0
+pycparser==2.22
 pydantic==2.11.7
 pydantic-settings==2.10.1
 pydantic_core==2.33.2
 pydeck==0.8.1b0
 Pygments==2.16.1
 pygount==2.0.0
+PyJWT==2.10.1
 pyparsing==3.1.2
+pytest==8.4.1
 python-dateutil==2.9.0.post0
 python-docx==1.1.2
 python-dotenv==1.1.1
@@ -121,14 +132,16 @@ six==1.17.0
 smart_open==7.3.0.post1
 smmap==5.0.1
 sniffio==1.3.1
+sortedcontainers==2.4.0
 spacy-legacy==3.0.12
 spacy-loggers==1.0.5
 srsly==2.5.1
 sse-starlette==2.4.1
 stack-data==0.6.3
 starlette==0.47.1
-streamlit==1.39.0
+streamlit==1.49.1
 streamlit-agraph==0.0.45
+streamlit-authenticator==0.4.2
 sympy==1.14.0
 tenacity==8.2.3
 thinc==8.3.6
@@ -136,6 +149,7 @@ threadpoolctl==3.5.0
 tiktoken==0.9.0
 tokenizers==0.21.0
 toml==0.10.2
+tomli==2.2.1
 toolz==0.12.0
 torch==2.7.1
 tornado==6.3.3
