--- a/requirements.txt
+++ b/requirements.txt
@@ -24,6 +24,7 @@ contourpy==1.3.0
 cryptography==45.0.6
 cycler==0.12.1
 cymem==2.0.11
+DateTime==5.5
 decorator==5.1.1
 deepl==1.21.0
 distro==1.9.0
@@ -172,3 +173,4 @@ weasel==0.4.1
 Werkzeug==3.1.3
 wrapt==1.17.2
 zipp==3.17.0
+zope.interface==8.0
